# riirview

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  diesel.toml
.github/workflows/: ci.yml  release.yml
migrations/2023-10-23-192800_create_categories/: up.sql
migrations/2023-10-25-064001_create_repos/: up.sql
migrations/2023-10-28-213646_create_prs/: up.sql
migrations/2025-01-17-132544_initial_migration/: up.sql
migrations/2025-01-20-115422_add_score/: down.sql  up.sql
migrations/2025-01-26-181202_add_pr_info/: down.sql  up.sql
migrations/2025-02-03-152518_score_boost/: down.sql  up.sql
migrations/2025-02-09-173523_init/: up.sql
migrations/2025-02-15-170956_add_reason/: down.sql  up.sql
src/: cli.rs  config.rs  dirs.rs  filter.rs  gh.rs  lib.rs  main.rs  models.rs  schema.rs  score.rs  service.rs  tui.rs
src/backend/: Cargo.toml  mod.rs  schema.rs
src/backend/migrations/2023-10-28-213646_create_prs/: down.sql
src/backend/src/: gh.rs  lib.rs  main.rs  mod.rs  models.rs  schema.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/frontend/: Cargo.toml  index.html
src/frontend/src/: category.rs  home.rs  lib.rs  main.rs
src/libriirview/: Cargo.toml
src/libriirview/src/: json.rs
tests/: integration_test.rs  issues.json  notifications.json  pulls.json  release.json  rules.toml
