[package]
name = "riirview"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-humanize = "0.2.3"
diesel = { version = "2.2.6", features = ["chrono", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.25"
log4rs = "1.3.0"
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
url = "2.5.4"

[dev-dependencies]
serde_json = "1.0.136"
