[package]
name = "riirview"
version = "1.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-humanize = "0.2.3"
diesel = { version = "2.2.10", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.27"
log4rs = "1.3.0"
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
url = "2.5.4"

[dev-dependencies]
serde_json = "1.0.140"
mockito = "1.7.0"
tempfile = "3.19.1"

[build-dependencies]
vergen-git2 = "1.0.7"
