[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
log = {version = "0.4.20"}
env_logger = { version = "0.10.0"}
rocket = {version="0.5.0-rc.3", features=["json"]}
regex = { version = "1.10.2"}
reqwest = {version="0.11", features = ["json"]}
serde = {version="1.0.189", features=["derive"]}
url = "2.4.1"
uuid = {version="1.5.0", features=["serde", "v4"]}
libriirview = {path="../libriirview" }
