[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.4.7", features=["derive"]}
prettytable-rs = {version="0.10.0"}
reqwest = {version="0.11", features = ["json"]}
serde = {version="1.0.192", features=["derive"]}
tokio = {version="1.34.0", features = ["full"]}
libriirview = {path="../libriirview" }
